src/parser/PolyCParserParser.java
// Generated from java-escape by ANTLR 4.11.1
package parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class PolyCParserParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		IntegerConstant=1, StringConstant=2, BooleanConstant=3, Array=4, Boolean=5, 
		Break=6, Case=7, Continue=8, Default=9, Dict=10, Do=11, Dot=12, Else=13, 
		False=14, If=15, Int=16, Iterable=17, Print=18, Return=19, Size=20, String=21, 
		Switch=22, True=23, Void=24, While=25, LeftParen=26, RightParen=27, LeftBracket=28, 
		RightBracket=29, LeftBrace=30, RightBrace=31, Plus=32, Minus=33, Div=34, 
		Mod=35, BitXor=36, BitAnd=37, BitOr=38, BitNot=39, LogicalAnd=40, LogicalOr=41, 
		LogicalNot=42, Assign=43, PlusAssign=44, MinusAssign=45, DivAssign=46, 
		ModAssign=47, XorAssign=48, AndAssign=49, OrAssign=50, RightShiftAssign=51, 
		PlusPlus=52, MinusMinus=53, Less=54, Greater=55, Equal=56, NotEqual=57, 
		LessEqual=58, GreaterEqual=59, Comma=60, Question=61, Colon=62, Semi=63, 
		Identifier=64, Newline=65, Whitespace=66, BlockComment=67, LineComment=68;
	public static final int
		RULE_parse = 0, RULE_primaryExpression = 1, RULE_postfixExpression = 2, 
		RULE_unaryExpression = 3, RULE_unaryOperator = 4, RULE_functionOperator = 5, 
		RULE_multiplicativeExpression = 6, RULE_additiveExpression = 7, RULE_shiftExpression = 8, 
		RULE_relationExpression = 9, RULE_relationOperator = 10, RULE_equalityExpression = 11, 
		RULE_equalityOperator = 12, RULE_andExpression = 13, RULE_xorExpression = 14, 
		RULE_orExpression = 15, RULE_logicalAndExpression = 16, RULE_logicalOrExpression = 17, 
		RULE_conditionalExpression = 18, RULE_assignmentExpression = 19, RULE_assignmentOperator = 20, 
		RULE_expression = 21, RULE_constantExpression = 22, RULE_statement = 23, 
		RULE_labeledStatement = 24, RULE_declarationStatement = 25, RULE_expressionStatement = 26, 
		RULE_blockStatement = 27, RULE_sequentialStatement = 28, RULE_ifStatement = 29, 
		RULE_condition = 30, RULE_loopStatement = 31, RULE_loopSpecifier = 32, 
		RULE_jumpStatement = 33, RULE_declaration = 34, RULE_simpleDeclaration = 35, 
		RULE_declSpecifier = 36, RULE_typeSpecifier = 37, RULE_initDeclaratorList = 38, 
		RULE_initDeclarator = 39, RULE_declarator = 40, RULE_initializer = 41, 
		RULE_initializerClause = 42, RULE_bracketInitList = 43, RULE_initializerList = 44, 
		RULE_braceInitList = 45, RULE_colonInitializerList = 46, RULE_functionDeclaration = 47, 
		RULE_parameterList = 48, RULE_parameterDeclaration = 49, RULE_functionBody = 50, 
		RULE_emptyDeclaration = 51, RULE_program = 52, RULE_constant = 53;
	private static String[] makeRuleNames() {
		return new String[] {
			"parse", "primaryExpression", "postfixExpression", "unaryExpression", 
			"unaryOperator", "functionOperator", "multiplicativeExpression", "additiveExpression", 
			"shiftExpression", "relationExpression", "relationOperator", "equalityExpression", 
			"equalityOperator", "andExpression", "xorExpression", "orExpression", 
			"logicalAndExpression", "logicalOrExpression", "conditionalExpression", 
			"assignmentExpression", "assignmentOperator", "expression", "constantExpression", 
			"statement", "labeledStatement", "declarationStatement", "expressionStatement", 
			"blockStatement", "sequentialStatement", "ifStatement", "condition", 
			"loopStatement", "loopSpecifier", "jumpStatement", "declaration", "simpleDeclaration", 
			"declSpecifier", "typeSpecifier", "initDeclaratorList", "initDeclarator", 
			"declarator", "initializer", "initializerClause", "bracketInitList", 
			"initializerList", "braceInitList", "colonInitializerList", "functionDeclaration", 
			"parameterList", "parameterDeclaration", "functionBody", "emptyDeclaration", 
			"program", "constant"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, "'array'", "'bool'", "'break'", "'case'", "'continue'", 
			"'default'", "'dict'", "'do'", "'.'", "'else'", "'false'", "'if'", "'int'", 
			"'iterable'", "'print'", "'return'", "'size'", "'string'", "'switch'", 
			"'true'", "'void'", "'while'", "'('", "')'", "'['", "']'", "'{'", "'}'", 
			"'+'", "'-'", "'/'", "'%'", "'^'", "'&'", "'|'", "'~'", null, null, null, 
			"'='", "'+='", "'-='", "'/='", "'%='", "'^='", "'&='", "'|='", "'>>='", 
			"'++'", "'--'", "'<'", "'>'", "'=='", "'!='", "'<='", "'>='", "','", 
			"'?'", "':'", "';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "IntegerConstant", "StringConstant", "BooleanConstant", "Array", 
			"Boolean", "Break", "Case", "Continue", "Default", "Dict", "Do", "Dot", 
			"Else", "False", "If", "Int", "Iterable", "Print", "Return", "Size", 
			"String", "Switch", "True", "Void", "While", "LeftParen", "RightParen", 
			"LeftBracket", "RightBracket", "LeftBrace", "RightBrace", "Plus", "Minus", 
			"Div", "Mod", "BitXor", "BitAnd", "BitOr", "BitNot", "LogicalAnd", "LogicalOr", 
			"LogicalNot", "Assign", "PlusAssign", "MinusAssign", "DivAssign", "ModAssign", 
			"XorAssign", "AndAssign", "OrAssign", "RightShiftAssign", "PlusPlus", 
			"MinusMinus", "Less", "Greater", "Equal", "NotEqual", "LessEqual", "GreaterEqual", 
			"Comma", "Question", "Colon", "Semi", "Identifier", "Newline", "Whitespace", 
			"BlockComment", "LineComment"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java-escape"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PolyCParserParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParseContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(PolyCParserParser.EOF, 0); }
		public ProgramContext program() {
			return getRuleContext(ProgramContext.class,0);
		}
		public ParseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PolyCParserListener ) ((PolyCParserListener)listener).enterParse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PolyCParserListener ) ((PolyCParserListener)listener).exitParse(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PolyCParserVisitor ) return ((PolyCParserVisitor<? extends T>)visitor).visitParse(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParseContext parse() throws RecognitionException {
		ParseContext _localctx = new ParseContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_parse);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (((_la) & ~0x3f) == 0 && ((1L << _la) & -9223372036835703760L) != 0) {
				{
				setState(108);
				program();
				}
			}

			setState(111);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PrimaryExpressionContext extends ParserRuleContext {
		public ConstantContext constant() {
			return getRuleContext(ConstantContext.class,0);
		}
		public TerminalNode LeftParen() { return getToken(PolyCParserParser.LeftParen, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode RightParen() { return getToken(PolyCParserParser.RightParen, 0); }
		public TerminalNode Identifier() { return getToken(PolyCParserParser.Identifier, 0); }
		public PrimaryExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_primaryExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PolyCParserListener ) ((PolyCParserListener)listener).enterPrimaryExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PolyCParserListener ) ((PolyCParserListener)listener).exitPrimaryExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PolyCParserVisitor ) return ((PolyCParserVisitor<? extends T>)visitor).visitPrimaryExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrimaryExpressionContext primaryExpression() throws RecognitionException {
		PrimaryExpressionContext _localctx = new PrimaryExpressionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_primaryExpression);
		try {
			setState(119);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IntegerConstant:
			case StringConstant:
			case BooleanConstant:
				enterOuterAlt(_localctx, 1);
				{
				setState(113);
				constant();
				}
				break;
			case LeftParen:
				enterOuterAlt(_localctx, 2);
				{
				setState(114);
				match(LeftParen);
				setState(115);
				expression();
				setState(116);
				match(RightParen);
				}
				break;
			case Identifier:
				enterOuterAlt(_localctx, 3);
				{
				setState(118);
				match(Identifier);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PostfixExpressionContext extends ParserRuleContext {
		public PrimaryExpressionContext primaryExpression() {
			return getRuleContext(PrimaryExpressionContext.class,0);
		}
		public PostfixExpressionContext postfixExpression() {
			return getRuleContext(PostfixExpressionContext.class,0);
		}
		public TerminalNode LeftBracket() { return getToken(PolyCParserParser.LeftBracket, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode RightBracket() { return getToken(PolyCParserParser.RightBracket, 0); }
		public TerminalNode LeftParen() { return getToken(PolyCParserParser.LeftParen, 0); }
		public TerminalNode RightParen() { return getToken(PolyCParserParser.RightParen, 0); }
		public InitializerListContext initializerList() {
			return getRuleContext(InitializerListContext.class,0);
		}
		public TerminalNode PlusPlus() { return getToken(PolyCParserParser.PlusPlus, 0); }
		public TerminalNode MinusMinus() { return getToken(PolyCParserParser.MinusMinus, 0); }
		public TerminalNode Dot() { return getToken(PolyCParserParser.Dot, 0); }
		public TerminalNode Identifier() { return getToken(PolyCParserParser.Identifier, 0); }
		public PostfixExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_postfixExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PolyCParserListener ) ((PolyCParserListener)listener).enterPostfixExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PolyCParserListener ) ((PolyCParserListener)listener).exitPostfixExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PolyCParserVisitor ) return ((PolyCParserVisitor<? extends T>)visitor).visitPostfixExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PostfixExpressionContext postfixExpression() throws RecognitionException {
		return postfixExpression(0);
	}

	private PostfixExpressionContext postfixExpression(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		PostfixExpressionContext _localctx = new PostfixExpressionContext(_ctx, _parentState);
		PostfixExpressionContext _prevctx = _localctx;
		int _startState = 4;
		enterRecursionRule(_localctx, 4, RULE_postfixExpression, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(122);
			primaryExpression();
			}
			_ctx.stop = _input.LT(-1);
			setState(142);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(140);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
					case 1:
						{
						_localctx = new PostfixExpressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_postfixExpression);
						setState(124);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(125);
						match(LeftBracket);
						setState(126);
						expression();
						setState(127);
						match(RightBracket);
						}
						break;
					case 2:
						{
						_localctx = new PostfixExpressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_postfixExpression);
						setState(129);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(130);
						match(LeftParen);
						setState(132);
						_errHandler.sync(this);
						_la = _input.LA(1);
						if ((((_la - 1)) & ~0x3f) == 0 && ((1L << (_la - 1)) & -9216614156363726833L) != 0) {
							{
							setState(131);
							initializerList();
							}
						}

						setState(134);
						match(RightParen);
						}
						break;
					case 3:
						{
						_localctx = new PostfixExpressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_postfixExpression);
						setState(135);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(136);
						_la = _input.LA(1);
						if ( !(_la==PlusPlus || _la==MinusMinus) ) {
						_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						}
						break;
					case 4:
						{
						_localctx = new PostfixExpressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_postfixExpression);
						setState(137);
						if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
						setState(138);
						match(Dot);
						setState(139);
						match(Identifier);
						}
						break;
					}
					} 
				}
				setState(144);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UnaryExpressionContext extends ParserRuleContext {
		public PostfixExpressionContext postfixExpression() {
			return getRuleContext(PostfixExpressionContext.class,0);
		}
		public UnaryOperatorContext unaryOperator() {
			return getRuleContext(UnaryOperatorContext.class,0);
		}
		public UnaryExpressionContext unaryExpression() {
			return getRuleContext(UnaryExpressionContext.class,0);
		}
		public FunctionOperatorContext functionOperator() {
			return getRuleContext(FunctionOperatorContext.class,0);
		}
		public TerminalNode LeftParen() { return getToken(PolyCParserParser.LeftParen, 0); }
		public AssignmentExpressionContext assignmentExpression() {
			return getRuleContext(AssignmentExpressionContext.class,0);
		}
		public TerminalNode RightParen() { return getToken(PolyCParserParser.RightParen, 0); }
		public UnaryExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unaryExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PolyCParserListener ) ((PolyCParserListener)listener).enterUnaryExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PolyCParserListener ) ((PolyCParserListener)listener).exitUnaryExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PolyCParserVisitor ) return ((PolyCParserVisitor<? extends T>)visitor).visitUnaryExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UnaryExpressionContext unaryExpression() throws RecognitionException {
		UnaryExpressionContext _localctx = new UnaryExpressionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_unaryExpression);
		try {
			setState(154);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IntegerConstant:
			case StringConstant:
			case BooleanConstant:
			case LeftParen:
			case Identifier:
				enterOuterAlt(_localctx, 1);
				{
				setState(145);
				postfixExpression(0);
				}
				break;
			case Plus:
			case Minus:
			case BitNot:
			case LogicalNot:
			case PlusPlus:
			case MinusMinus:
				enterOuterAlt(_localctx, 2);
				{
				setState(146);
				unaryOperator();
				setState(147);
				unaryExpression();
				}
				break;
			case Array:
			case Int:
			case Print:
			case Size:
			case String:
				enterOuterAlt(_localctx, 3);
				{
				setState(149);
				functionOperator();
				setState(150);
				match(LeftParen);
				setState(151);
				assignmentExpression();
				setState(152);
				match(RightParen);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class UnaryOperatorContext extends ParserRuleContext {
		public TerminalNode PlusPlus() { return getToken(PolyCParserParser.PlusPlus, 0); }
		public TerminalNode MinusMinus() { return getToken(PolyCParserParser.MinusMinus, 0); }
		public TerminalNode Plus() { return getToken(PolyCParserParser.Plus, 0); }
		public TerminalNode Minus() { return getToken(PolyCParserParser.Minus, 0); }
		public TerminalNode BitNot() { return getToken(PolyCParserParser.BitNot, 0); }
		public TerminalNode LogicalNot() { return getToken(PolyCParserParser.LogicalNot, 0); }
		public UnaryOperatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unaryOperator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PolyCParserListener ) ((PolyCParserListener)listener).enterUnaryOperator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PolyCParserListener ) ((PolyCParserListener)listener).exitUnaryOperator(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PolyCParserVisitor ) return ((PolyCParserVisitor<? extends T>)visitor).visitUnaryOperator(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UnaryOperatorContext unaryOperator() throws RecognitionException {
		UnaryOperatorContext _localctx = new UnaryOperatorContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_unaryOperator);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(156);
			_la = _input.LA(1);
			if ( !(((_la) & ~0x3f) == 0 && ((1L << _la) & 13515759569338368L) != 0) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionOperatorContext extends ParserRuleContext {
		public TerminalNode Size() { return getToken(PolyCParserParser.Size, 0); }
		public TerminalNode Int() { return getToken(PolyCParserParser.Int, 0); }
		public TerminalNode String() { return getToken(PolyCParserParser.String, 0); }
		public TerminalNode Array() { return getToken(PolyCParserParser.Array, 0); }
		public TerminalNode Print() { return getToken(PolyCParserParser.Print, 0); }
		public FunctionOperatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionOperator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PolyCParserListener ) ((PolyCParserListener)listener).enterFunctionOperator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PolyCParserListener ) ((PolyCParserListener)listener).exitFunctionOperator(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PolyCParserVisitor ) return ((PolyCParserVisitor<? extends T>)visitor).visitFunctionOperator(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionOperatorContext functionOperator() throws RecognitionException {
		FunctionOperatorContext _localctx = new FunctionOperatorContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_functionOperator);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(158);
			_la = _input.LA(1);
			if ( !(((_la) & ~0x3f) == 0 && ((1L << _la) & 3473424L) != 0) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MultiplicativeExpressionContext extends ParserRuleContext {
		public UnaryExpressionContext unaryExpression() {
			return getRuleContext(UnaryExpressionContext.class,0);
		}
		public MultiplicativeExpressionContext multiplicativeExpression() {
			return getRuleContext(MultiplicativeExpressionContext.class,0);
		}
		public TerminalNode Div() { return getToken(PolyCParserParser.Div, 0); }
		public TerminalNode Mod() { return getToken(PolyCParserParser.Mod, 0); }
		public MultiplicativeExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_multiplicativeExpression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PolyCParserListener ) ((PolyCParserListener)listener).enterMultiplicativeExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PolyCParserListener ) ((PolyCParserListener)listener).exitMultiplicativeExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PolyCParserVisitor ) return ((PolyCParserVisitor<? extends T>)visitor).visitMultiplicativeExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MultiplicativeExpressionContext multiplicativeExpression() throws RecognitionException {
		return multiplicativeExpression(0);
	}

	private MultiplicativeExpressionContext multiplicativeExpression(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		MultiplicativeExpressionContext _localctx = new MultiplicativeExpressionContext(_ctx, _parentState);
		MultiplicativeExpressionContext _prevctx = _localctx;
		int _startState = 12;
		enterRecursionRule(_localctx, 12, RULE_multiplicativeExpression, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(161);
			unaryExpression();
			}
			_ctx.stop = _input.LT(-1);
			setState(168);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new MultiplicativeExpressionContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_multiplicativeExpression);
					setState(163);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(164);
					_la = _input.LA(1);
					if ( !(_la==Div || _la==Mod) ) {
					_errHandler.recoverInline(this);
					}
					else {
						if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
						_errHandler.reportMatch(this);
						consume();
					}
					setState(165);
					unaryExpression();
					}
					} 
				}
				setState(170);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}
